# Call-me-maybe

./: IMPLEMENTATION.md  Makefile  mypy.ini  pyproject.toml  test_sdk.py
data/input/: test_one.json
data/output/: function_calling_results.json
learn/: arg.py  first.txt  py.txt
llm_sdk/: __init__.py
src/: __main__.py  constrained_generator.py  function_caller.py  generator.py  loader.py  parsing.py  schema_builder.py  state_machine.py  vocab.py
