[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.13.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]
